// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-switch Default switch-button 1`] = `
<DocumentFragment>
  <span
    class="field"
  >
    <span
      class="switch"
    >
      <input
        aria-checked="false"
        class="switch__control"
        id="switch-1"
        role="switch"
        type="checkbox"
        value="123"
      />
      <span
        class="switch__button"
      />
    </span>
    <label
      class="field__label field__label--end"
      for="switch-1"
    >
      Default
    </label>
  </span>
</DocumentFragment>
`;

exports[`Storyshots ebay-switch Disabled switch-button 1`] = `
<DocumentFragment>
  <span
    class="field"
  >
    <span
      class="switch"
    >
      <input
        aria-checked="false"
        class="switch__control"
        disabled=""
        id="switch-20"
        role="switch"
        type="checkbox"
        value=""
      />
      <span
        class="switch__button"
      />
    </span>
    <label
      class="field__label field__label--end"
      for="switch-20"
    >
      Disabled
    </label>
  </span>
</DocumentFragment>
`;

exports[`Storyshots ebay-switch Selected switch-button 1`] = `
<DocumentFragment>
  <span
    class="field"
  >
    <span
      class="switch"
    >
      <input
        aria-checked="true"
        checked=""
        class="switch__control"
        id="switch-2"
        role="switch"
        type="checkbox"
        value="123"
      />
      <span
        class="switch__button"
      />
    </span>
    <label
      class="field__label field__label--end"
      for="switch-2"
    >
      Checked
    </label>
  </span>
</DocumentFragment>
`;
